--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,31 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>AngularTourOfHeroes</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta charset="utf-8">
+    <title>Shop Marvel</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="assets/img/marvel.webp">
+
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+
 </head>
 <body>
-  <app-root></app-root>
+
+    <header>
+        
+        <div class="head">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/MarvelLogo.svg" alt="">
+        </div>
+    </header>
+
+    <app-root></app-root>
+
+    <footer>
+        <span>Vincenzo Laveneziana Per Crispy Bacon</span>
+        <span>Angular Project &#129310;</span>
+    </footer>
+
 </body>
 </html>
